[package]
name = "sakuramml"
version = "0.1.29"
edition = "2021"
authors = ["kujirahand <web@kujirahand.com>"]
rust-version = "1.64.0"
description = "sakuramml is MML/ABC to MIDI Compiler"
readme = "README.md"
homepage = "https://sakuramml.com"
repository = "https://github.com/kujirahand/sakuramml-rust"
license-file = "LICENSE"
keywords = ["MML", "MIDI", "Compiler", "ABC"]
documentation = "https://docs.rs/sakuramml"
exclude = ["/test.sh", "/test.mml", "/test.mid", "/eval.mid", ".*", "/pkg/*"]
include = ["/src", "LICENSE", "/samples"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

