[package]
name = "sakuramml"
version = "0.1.32"
edition = "2021"
rust-version = "1.78.0"
authors = ["kujirahand <web@kujirahand.com>"]
description = "sakuramml is MML/ABC to MIDI Compiler"
readme = "README.md"
homepage = "https://sakuramml.com"
repository = "https://github.com/kujirahand/sakuramml-rust"
license-file = "LICENSE"
keywords = ["MML", "MIDI", "Compiler", "ABC", "script", "wasm", "music"]
documentation = "https://docs.rs/sakuramml"
exclude = ["/test.sh", "/test.mml", "/test.mid", "/eval.mid", ".*", "/pkg/*"]
include = ["/src", "LICENSE", "/samples"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
