[package]
name = "sakuramml"
version = "0.1.41"
edition = "2021"
authors = ["kujirahand <web@kujirahand.com>"]
description = "MML(Music Macro Language) compiler, MML to MIDI"
readme = "README.md"
homepage = "https://sakuramml.com"
repository = "https://github.com/kujirahand/sakuramml-rust"
license-file = "LICENSE"
keywords = ["MML", "MIDI", "Compiler", "ABC", "music"]
documentation = "https://docs.rs/sakuramml"
exclude = ["/test.*", "/eval.mid", ".*", "/pkg/*"]
include = ["/src", "LICENSE", "/samples"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
